name:                reflex-dom-svg
version:             0.3.2.0
synopsis:            Reflex functions for SVG elements.
description:         Provides support for easily creating and manipulating SVG elements via Reflex.
license:             BSD3
license-file:        LICENCE
author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:           Copyright (c) 2018, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            FRP,Web,Graphics
build-type:          Simple
extra-source-files:  changelog.md, README.md
cabal-version:       1.24

source-repository   head
  type:             git
  location:         git@github.com/qfpl/reflex-dom-svg/reflex-dom-svg.git

library
  ghc-options:         -Wall

  exposed-modules:     Reflex.Dom.Widget.SVG
                     , Reflex.Dom.Widget.SVG.Types
                     , Reflex.Dom.Widget.SVG.Types.Internal.Helper
                     , Reflex.Dom.Widget.SVG.Types.Internal
                     , Reflex.Dom.Widget.SVG.Types.Pos
                     , Reflex.Dom.Widget.SVG.Types.CornerRadius
                     , Reflex.Dom.Widget.SVG.Types.PreserveAspectRatio
                     , Reflex.Dom.Widget.SVG.Types.SVGEl
                     , Reflex.Dom.Widget.SVG.Types.ViewBox
                     , Reflex.Dom.Widget.SVG.Types.Elements
                     , Reflex.Dom.Widget.SVG.Types.Elements.SVG_Animate
                     , Reflex.Dom.Widget.SVG.Types.Elements.SVG_Circle
                     , Reflex.Dom.Widget.SVG.Types.Elements.SVG_Ellipse
                     , Reflex.Dom.Widget.SVG.Types.Elements.SVG_Group
                     , Reflex.Dom.Widget.SVG.Types.Elements.SVG_Line
                     , Reflex.Dom.Widget.SVG.Types.Elements.SVG_Path
                     , Reflex.Dom.Widget.SVG.Types.Elements.SVG_Polygon
                     , Reflex.Dom.Widget.SVG.Types.Elements.SVG_PolyLine
                     , Reflex.Dom.Widget.SVG.Types.Elements.SVG_Rect
                     , Reflex.Dom.Widget.SVG.Types.Elements.SVG_Svg
                     , Reflex.Dom.Widget.SVG.Types.Properties
                     , Reflex.Dom.Widget.SVG.Types.Properties.Height
                     , Reflex.Dom.Widget.SVG.Types.Properties.Radius
                     , Reflex.Dom.Widget.SVG.Types.Properties.Width
                     , Reflex.Dom.Widget.CSS
                     , Reflex.Dom.Widget.CSS.DataTypes
                     , Reflex.Dom.Widget.CSS.DataTypes.Dimensions
                     , Reflex.Dom.Widget.CSS.DataTypes.Dimensions.Angle
                     , Reflex.Dom.Widget.CSS.DataTypes.Dimensions.Frequency
                     , Reflex.Dom.Widget.CSS.DataTypes.Dimensions.Length
                     , Reflex.Dom.Widget.CSS.DataTypes.Dimensions.LengthOrPercentage
                     , Reflex.Dom.Widget.CSS.DataTypes.Dimensions.Resolution
                     , Reflex.Dom.Widget.CSS.DataTypes.Dimensions.Time
                     , Reflex.Dom.Widget.CSS.DataTypes.Percentage

  build-depends:       base >=4.9 && <=4.12
                     , text >= 1.2 && < 1.3
                     , reflex >= 0.4 && < 0.7
                     , reflex-dom-core >= 0.5 && < 0.7
                     , lens >= 4.16.1 && < 4.17
                     , containers == 0.5.*
                     , safe == 0.3.*

  hs-source-dirs:      src

  default-language:    Haskell2010
